# kubernetes-practice

./: README.md
k8s-in/: README.md  install.sh  kind-config.yml
k8s-in/apache/: deployment.yml  hpa.yml  namespace.yml  service.yml
k8s-in/fastapi_practice/backend/: Dockerfile  main.py  pyproject.toml
k8s-in/fastapi_practice/backend/backend.egg-info/: PKG-INFO  SOURCES.txt
k8s-in/fastapi_practice/frontend/: Dockerfile  api.js  package.json  pnpm-lock.yaml
k8s-in/fastapi_practice/frontend/app/: page.js
k8s-in/fastapi_practice/frontend/app/components/: AddFruitsForm.jsx  Fruits.jsx
k8s-in/fastapi_practice/k8s/: backend-deployment.yml  backend-service.yml  frontend-deployment.yml  frontend-service.yml
k8s-in/full-stack-chatapp/: install_minikube.sh
k8s-in/full-stack-chatapp/k8s/: deployment-backend.yml  deployment-frontend.yml  frontend-service.yml  ingress.yml  mongodb-deployment.yml  mongodb-pv.yml  mongodb-pvc.yml  namespace.yml  secrets.yml
k8s-in/k8s/: deployment.yml  hpa.yml  namespace.yml  service.yml
k8s-in/nginx/: cronjob.yml  daemon.yml  deployment.yml  job.yml  persistentVolume.yml  persistentVolumeClaim.yml  pod.yml  replicasets.yml  service.yml
k8s-in/sql/: configmaps.yml  secrets.yml  service.yml  statefulsets.yml
